编写程序启动脚本